--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -181,15 +181,16 @@ jobs:
             
             # For allure
             ls -la allure-results
+            which allure
+            allure generate allure-results -o allure-report --clean
+            ls -la
+            ls -la allure-report
       - store_artifacts:
           path: htmlcov
       - store_artifacts:
           path: coverage.xml
       - codecov/upload:
           file: coverage.xml
-      - allure/generate:
-          result_dir: allure-results
-          report_dir: allure-report
       - store_artifacts:
           path: allure-report
           destination: allure-report
