--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
           name: Install Allure
           command: |
             sudo apt-get update
-            sudo apt-get install -y allure
+            # sudo apt-get install -y allure
       - run:
           name: Setup env
           command: |
