--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 # Python CircleCI 2.1 configuration file
 version: 2.1
 orbs:
-  codecov: codecov/codecov@1.0.2
+  #codecov: codecov/codecov@1.0.2
   allure: ayte/allure@0.1.3
 jobs:
   py39: &test-template
@@ -171,6 +171,9 @@ jobs:
             echo DATA_PATH: $DATA_PATH
             echo DATABASE_URL: $DATABASE_URL
             . venv/bin/activate
+            ls -la /usr/bin
+            which allure || echo 'ignore error'
+            /usr/bin/allure || echo 'ignore error'
             
             # For coverage
             coverage report
