--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -164,7 +164,7 @@ jobs:
             . venv/bin/activate
             flake8 . --count --exclude=./venv* --select=E9,F63,F7,F82 --show-source --statistics
             coverage erase
-            coverage run --source=scrapydweb -m pytest -s -vv -l --disable-warnings --alluredir=allure-results tests
+            coverage run --source=scrapydweb -m pytest -s -vv -l --disable-warnings --alluredir=allure-results tests/test_z_cleantest.py
       - run:
           name: Generate report
           command: |
@@ -180,7 +180,7 @@ jobs:
             coverage html
             coverage xml
             ls -la
-            coveralls
+            coveralls || echo 'ignore error'
             
             # For allure
             ls -la allure-results
@@ -194,8 +194,8 @@ jobs:
           path: htmlcov
       - store_artifacts:
           path: coverage.xml
-      - codecov/upload:
-          file: coverage.xml
+      #- codecov/upload:
+      #    file: coverage.xml
       - store_artifacts:
           path: allure-report
           destination: allure-report
