--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 # Python CircleCI 2.1 configuration file
 version: 2.1
 orbs:
-  #codecov: codecov/codecov@1.0.2
+  codecov: codecov/codecov@1.0.2
   allure: ayte/allure@0.1.3
 jobs:
   py39: &test-template
@@ -37,11 +37,6 @@ jobs:
           name: Install telnet
           command: |
             sudo apt-get update && sudo apt-get install telnet
-      - run:
-          name: Install Allure
-          command: |
-            sudo apt-get update
-            # sudo apt-get install -y allure
       - run:
           name: Install Java 11
           command: |
@@ -181,36 +176,21 @@ jobs:
             echo DATA_PATH: $DATA_PATH
             echo DATABASE_URL: $DATABASE_URL
             . venv/bin/activate
-            
-            # For coverage
-            # https://circleci.com/developer/orbs/orb/codecov/codecov
             coverage report
             coverage html
             coverage xml
             ls -la
-            coveralls || echo 'ignore error'
-            
-            # For allure
-            # https://circleci.com/developer/orbs/orb/ayte/allure
-            ls -la allure-results
-            ls -la /usr/bin
-            ls -la /usr/local/bin
-            which allure || echo 'ignore error'
-            /usr/bin/allure || echo 'ignore error'
-            /usr/local/bin/allure || echo 'ignore error'
-            # /usr/local/bin/allure generate allure-results -o allure-report --clean
-            ls -la
-            # ls -la allure-report
+            ls -la allure-results || echo 'ignore error'
+            coveralls
       - store_artifacts:
           path: htmlcov
       - store_artifacts:
           path: coverage.xml
-      #- codecov/upload:
-      #    file: coverage.xml
-      - store_artifacts:
-          path: allure-report
-          destination: allure-report
-      #- codecov/upload
+      - codecov/upload:
+          file: coverage.xml
+      # https://circleci.com/developer/orbs/orb/codecov/codecov
+#      - codecov/upload
+      # https://circleci.com/developer/orbs/orb/ayte/allure
       - allure/install
       - allure/report
   py27:
