--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -171,7 +171,7 @@ jobs:
             flake8 . --count --exclude=./venv* --select=E9,F63,F7,F82 --show-source --statistics
             coverage erase
             # coverage run --source=scrapydweb -m pytest -s -vv -l --disable-warnings --alluredir=allure-results tests/test_z_cleantest.py
-            pytest --cov=scrapydweb -s -vv -l --disable-warnings --alluredir=allure-results tests/test_z_cleantest.py
+            pytest --cov scrapydweb -s -vv -l --disable-warnings --alluredir=allure-results tests/test_z_cleantest.py
       - run:
           name: Generate report
           command: |
@@ -194,6 +194,7 @@ jobs:
       - codecov/upload
       # https://circleci.com/developer/orbs/orb/coveralls/coveralls
       - coveralls/upload
+      # https://discuss.circleci.com/t/how-can-we-publish-pytest-results-to-circleci-using-allure-reports/37830/2
       # https://circleci.com/developer/orbs/orb/ayte/allure
       - allure/install
       - allure/report
