--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -182,20 +182,44 @@ jobs:
             ls -la
             ls -la allure-results || echo 'ignore error'
             coveralls
+          when:
+            condition:
+              test_result:
+                status: any
       - store_artifacts:
           path: htmlcov
+          when:
+            condition:
+              test_result:
+                status: any
       - store_artifacts:
           path: coverage.xml
+          when:
+            condition:
+              test_result:
+                status: any
       - codecov/upload:
           file: coverage.xml
+          when:
+            condition:
+              test_result:
+                status: any
       # https://circleci.com/developer/orbs/orb/codecov/codecov
       # - codecov/upload
       # https://circleci.com/developer/orbs/orb/coveralls/coveralls
       # - coveralls/upload
       # https://discuss.circleci.com/t/how-can-we-publish-pytest-results-to-circleci-using-allure-reports/37830/2
       # https://circleci.com/developer/orbs/orb/ayte/allure
-      - allure/install
-      - allure/report
+      - allure/install:
+        when:
+          condition:
+            test_result:
+              status: any
+      - allure/report:
+          when:
+            condition:
+              test_result:
+                status: any
   py27:
     <<: *test-template
     docker:
