--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,7 @@ jobs:
           name: Setup env
           command: |
             mkdir ~/logs
-            ls -l ~
+            ls -la ~
       - checkout
       - when:
           condition: <<parameters.is-py27>>
@@ -185,42 +185,41 @@ jobs:
           name: Run tests
           command: |
             pip list
-            ls -l
+            ls -la
             . venv/bin/activate
             flake8 . --count --exclude=./venv* --select=E9,F63,F7,F82 --show-source --statistics
             coverage erase
-            coverage run --source=scrapydweb -m pytest -s -vv -l --disable-warnings --alluredir=allure-results tests
-      - when:
-          condition:
-            equal: [ 1, 1 ]
-          steps:
-            - run:
-                name: Generate report
-                command: |
-                  echo DATA_PATH: $DATA_PATH
-                  echo DATABASE_URL: $DATABASE_URL
-                  . venv/bin/activate
-                  coverage report
-                  coverage html
-                  coverage xml
-                  ls -la
-                  ls -la allure-results || echo 'ignore error'
-                  coveralls
-                when: always
-            - store_artifacts:
-                path: htmlcov
-            - store_artifacts:
-                path: coverage.xml
-            - codecov/upload:
-                file: coverage.xml
-            # https://circleci.com/developer/orbs/orb/codecov/codecov
-            # - codecov/upload
-            # https://circleci.com/developer/orbs/orb/coveralls/coveralls
-            # - coveralls/upload
-            # https://discuss.circleci.com/t/how-can-we-publish-pytest-results-to-circleci-using-allure-reports/37830/2
-            # https://circleci.com/developer/orbs/orb/ayte/allure
-            # - allure/install
-            # - allure/report
+            coverage run --source=scrapydweb -m pytest -s -vv -l --disable-warnings --alluredir=allure-results tests/test_schedule.py
+      - run:
+          name: Generate report
+          command: |
+            echo DATA_PATH: $DATA_PATH
+            echo DATABASE_URL: $DATABASE_URL
+            . venv/bin/activate
+            coverage report
+            coverage html
+            coverage xml
+            ls -la
+            ls -la allure-results || echo 'ignore error'
+            coveralls
+          # https://discuss.circleci.com/t/make-custom-command-run-always-with-when-always/38957
+          # https://circleci.com/docs/configuration-reference/#the-when-attribute
+          when: always
+      - store_artifacts:
+          path: htmlcov
+      - store_artifacts:
+          path: coverage.xml
+      - codecov/upload:
+          file: coverage.xml
+      # https://circleci.com/developer/orbs/orb/codecov/codecov
+      # - codecov/upload
+      # https://circleci.com/developer/orbs/orb/coveralls/coveralls
+      # - coveralls/upload
+      # https://discuss.circleci.com/t/how-can-we-publish-pytest-results-to-circleci-using-allure-reports/37830/2
+      # https://circleci.com/developer/orbs/orb/ayte/allure
+      # - allure/install
+      # - allure/report
+      # https://circleci.com/docs/configuration-reference/#the-when-step
       - when:
           condition:
             equal: [ 1, 1 ]
